--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "react-scrollspy-navigation": "^2.0.6",
+    "react-type-animation": "^3.2.0",
     "react-ui-scrollspy": "^2.3.0"
   },
   "devDependencies": {
