--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-scroll": "^1.8.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "react-scrollspy-navigation": "^2.0.6",
